--- a/app/src/main/res/layout/fragment_enviroment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_enviroment_evaluation.xml
@@ -1,63 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/mongolia"
     android:theme="@style/ThemeOverlay.FirstAid.FullscreenContainer"
     tools:context=".screens.EnvironmentEvaluateFragment">
 
-    <TextView
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:text="IMPORTANT THINGS TO REMEMBER"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginTop="30dp"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="515dp">
-
-        <androidx.appcompat.widget.AppCompatTextView
+        android:layout_height="match_parent">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ex_button_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autoSizeMaxTextSize="100sp"
-            android:autoSizeMinTextSize="23sp"
-            android:autoSizeStepGranularity="10sp"
-            android:autoSizeTextType="uniform"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:inputType="textMultiLine"
-            android:maxLines="5"
-            android:textColor="@color/black"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:singleLine="false"
-            android:text="- Đánh giá hiện trường \n- Vỗ vào vai và gọi to \n- Gọi hỗ trợ và gọi 115 \n- Ấn trán, nâng cằm \n- Ghé tai vào miệng, cảm nhận hơi thở \n- KIểm tra mạch"
-            android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="-16dp" />
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:background="@color/lavender"
+            android:clickable="true"
+            android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/CLEAR"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/gray_600"
+                android:clickable="false"
+                android:text="Sơ cứu cơ bản"
+                android:layout_height="48dp"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:src="@drawable/down_arrow"
+                android:alpha="0.5"
+                android:layout_weight="0"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        <net.cachapa.expandablelayout.ExpandableLayout
+            android:id="@+id/expandable_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            app:el_duration="400"
+            app:el_expanded="true"
+            app:el_parallax="0.5">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:orientation="vertical"
+                android:id="@+id/expandable_layout_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </net.cachapa.expandablelayout.ExpandableLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ex_button_layout_2"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:background="@color/lavender"
+            android:clickable="true"
+            android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/CLEAR"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/gray_600"
+                android:clickable="false"
+                android:text="Chọn loại chấn thương"
+                android:layout_height="48dp"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:src="@drawable/down_arrow"
+                android:alpha="0.5"
+                android:layout_weight="0"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <net.cachapa.expandablelayout.ExpandableLayout
+            android:id="@+id/expandable_layout_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            app:el_duration="400"
+            app:el_expanded="true"
+            app:el_parallax="0.5">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:orientation="vertical"
+                android:id="@+id/expandable_layout_content_2"
+                android:gravity="left"
+                android:layout_gravity="left"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </net.cachapa.expandablelayout.ExpandableLayout>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/skip_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/call_115"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_gravity="center"
-        android:layout_marginTop="255dp"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:text="Next"
+        android:layout_marginHorizontal="50dp"
+        android:textColor="@color/white"
+        android:background="@drawable/blue_rounded_button"
+        android:layout_marginBottom="50dp"
+        android:text="Gọi 115"
         android:textAllCaps="false" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
